// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`IndicatorInformation matches AllIndicators story snapshot 1`] = `
<div>
  <div>
    <h2
      class="text-xl font-semibold text-gray-900 mb-4"
    >
      Economic Indicators
    </h2>
    <dl
      class="space-y-3"
    >
      <div
        class="flex flex-wrap items-center gap-1 mb-2"
      >
        <div
          class="flex w-full items-center gap-2"
        >
          <div
            class="text-gray-500"
          >
            <svg
              class="w-4 h-4"
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm40-68a28,28,0,0,1-28,28h-4v8a8,8,0,0,1-16,0v-8H104a8,8,0,0,1,0-16h36a12,12,0,0,0,0-24H116a28,28,0,0,1,0-56h4V72a8,8,0,0,1,16,0v8h16a8,8,0,0,1,0,16H116a12,12,0,0,0,0,24h24A28,28,0,0,1,168,148Z"
              />
            </svg>
          </div>
          <dt
            class="text-sm font-medium uppercase text-gray-500"
          >
            GDP
          </dt>
        </div>
        <dd
          class="text-sm text-gray-900"
        >
          $18000000000000
        </dd>
      </div>
      <div
        class="flex flex-wrap items-center gap-1 mb-2"
      >
        <div
          class="flex w-full items-center gap-2"
        >
          <div
            class="text-gray-500"
          >
            <svg
              class="w-4 h-4"
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M232,208a8,8,0,0,1-8,8H32a8,8,0,0,1-8-8V48a8,8,0,0,1,16,0v94.37L90.73,98a8,8,0,0,1,10.07-.38l58.81,44.11L218.73,90a8,8,0,1,1,10.54,12l-64,56a8,8,0,0,1-10.07.38L96.39,114.29,40,163.63V200H224A8,8,0,0,1,232,208Z"
              />
            </svg>
          </div>
          <dt
            class="text-sm font-medium uppercase text-gray-500"
          >
            Inflation Rate
          </dt>
        </div>
        <dd
          class="text-sm text-gray-900"
        >
          3.2%
        </dd>
      </div>
      <div
        class="flex flex-wrap items-center gap-1 mb-2"
      >
        <div
          class="flex w-full items-center gap-2"
        >
          <div
            class="text-gray-500"
          >
            <svg
              class="w-4 h-4"
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M216,56H176V48a24,24,0,0,0-24-24H104A24,24,0,0,0,80,48v8H40A16,16,0,0,0,24,72V200a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V72A16,16,0,0,0,216,56ZM96,48a8,8,0,0,1,8-8h48a8,8,0,0,1,8,8v8H96ZM216,72v41.61A184,184,0,0,1,128,136a184.07,184.07,0,0,1-88-22.38V72Zm0,128H40V131.64A200.19,200.19,0,0,0,128,152a200.25,200.25,0,0,0,88-20.37V200ZM104,112a8,8,0,0,1,8-8h32a8,8,0,0,1,0,16H112A8,8,0,0,1,104,112Z"
              />
            </svg>
          </div>
          <dt
            class="text-sm font-medium uppercase text-gray-500"
          >
            Unemployment Rate
          </dt>
        </div>
        <dd
          class="text-sm text-gray-900"
        >
          5%
        </dd>
      </div>
    </dl>
  </div>
</div>
`;

exports[`IndicatorInformation matches OnlyGDP story snapshot 1`] = `
<div>
  <div>
    <h2
      class="text-xl font-semibold text-gray-900 mb-4"
    >
      Economic Indicators
    </h2>
    <dl
      class="space-y-3"
    >
      <div
        class="flex flex-wrap items-center gap-1 mb-2"
      >
        <div
          class="flex w-full items-center gap-2"
        >
          <div
            class="text-gray-500"
          >
            <svg
              class="w-4 h-4"
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm40-68a28,28,0,0,1-28,28h-4v8a8,8,0,0,1-16,0v-8H104a8,8,0,0,1,0-16h36a12,12,0,0,0,0-24H116a28,28,0,0,1,0-56h4V72a8,8,0,0,1,16,0v8h16a8,8,0,0,1,0,16H116a12,12,0,0,0,0,24h24A28,28,0,0,1,168,148Z"
              />
            </svg>
          </div>
          <dt
            class="text-sm font-medium uppercase text-gray-500"
          >
            GDP
          </dt>
        </div>
        <dd
          class="text-sm text-gray-900"
        >
          $18000000000000
        </dd>
      </div>
      <div
        class="flex flex-wrap items-center gap-1 mb-2"
      >
        <div
          class="flex w-full items-center gap-2"
        >
          <div
            class="text-gray-500"
          >
            <svg
              class="w-4 h-4"
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M232,208a8,8,0,0,1-8,8H32a8,8,0,0,1-8-8V48a8,8,0,0,1,16,0v94.37L90.73,98a8,8,0,0,1,10.07-.38l58.81,44.11L218.73,90a8,8,0,1,1,10.54,12l-64,56a8,8,0,0,1-10.07.38L96.39,114.29,40,163.63V200H224A8,8,0,0,1,232,208Z"
              />
            </svg>
          </div>
          <dt
            class="text-sm font-medium uppercase text-gray-500"
          >
            Inflation Rate
          </dt>
        </div>
        <dd
          class="text-sm text-gray-900"
        >
          N/A
        </dd>
      </div>
      <div
        class="flex flex-wrap items-center gap-1 mb-2"
      >
        <div
          class="flex w-full items-center gap-2"
        >
          <div
            class="text-gray-500"
          >
            <svg
              class="w-4 h-4"
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M216,56H176V48a24,24,0,0,0-24-24H104A24,24,0,0,0,80,48v8H40A16,16,0,0,0,24,72V200a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V72A16,16,0,0,0,216,56ZM96,48a8,8,0,0,1,8-8h48a8,8,0,0,1,8,8v8H96ZM216,72v41.61A184,184,0,0,1,128,136a184.07,184.07,0,0,1-88-22.38V72Zm0,128H40V131.64A200.19,200.19,0,0,0,128,152a200.25,200.25,0,0,0,88-20.37V200ZM104,112a8,8,0,0,1,8-8h32a8,8,0,0,1,0,16H112A8,8,0,0,1,104,112Z"
              />
            </svg>
          </div>
          <dt
            class="text-sm font-medium uppercase text-gray-500"
          >
            Unemployment Rate
          </dt>
        </div>
        <dd
          class="text-sm text-gray-900"
        >
          N/A
        </dd>
      </div>
    </dl>
  </div>
</div>
`;

exports[`IndicatorInformation matches OnlyInflation story snapshot 1`] = `
<div>
  <div>
    <h2
      class="text-xl font-semibold text-gray-900 mb-4"
    >
      Economic Indicators
    </h2>
    <dl
      class="space-y-3"
    >
      <div
        class="flex flex-wrap items-center gap-1 mb-2"
      >
        <div
          class="flex w-full items-center gap-2"
        >
          <div
            class="text-gray-500"
          >
            <svg
              class="w-4 h-4"
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm40-68a28,28,0,0,1-28,28h-4v8a8,8,0,0,1-16,0v-8H104a8,8,0,0,1,0-16h36a12,12,0,0,0,0-24H116a28,28,0,0,1,0-56h4V72a8,8,0,0,1,16,0v8h16a8,8,0,0,1,0,16H116a12,12,0,0,0,0,24h24A28,28,0,0,1,168,148Z"
              />
            </svg>
          </div>
          <dt
            class="text-sm font-medium uppercase text-gray-500"
          >
            GDP
          </dt>
        </div>
        <dd
          class="text-sm text-gray-900"
        >
          N/A
        </dd>
      </div>
      <div
        class="flex flex-wrap items-center gap-1 mb-2"
      >
        <div
          class="flex w-full items-center gap-2"
        >
          <div
            class="text-gray-500"
          >
            <svg
              class="w-4 h-4"
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M232,208a8,8,0,0,1-8,8H32a8,8,0,0,1-8-8V48a8,8,0,0,1,16,0v94.37L90.73,98a8,8,0,0,1,10.07-.38l58.81,44.11L218.73,90a8,8,0,1,1,10.54,12l-64,56a8,8,0,0,1-10.07.38L96.39,114.29,40,163.63V200H224A8,8,0,0,1,232,208Z"
              />
            </svg>
          </div>
          <dt
            class="text-sm font-medium uppercase text-gray-500"
          >
            Inflation Rate
          </dt>
        </div>
        <dd
          class="text-sm text-gray-900"
        >
          3.2%
        </dd>
      </div>
      <div
        class="flex flex-wrap items-center gap-1 mb-2"
      >
        <div
          class="flex w-full items-center gap-2"
        >
          <div
            class="text-gray-500"
          >
            <svg
              class="w-4 h-4"
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M216,56H176V48a24,24,0,0,0-24-24H104A24,24,0,0,0,80,48v8H40A16,16,0,0,0,24,72V200a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V72A16,16,0,0,0,216,56ZM96,48a8,8,0,0,1,8-8h48a8,8,0,0,1,8,8v8H96ZM216,72v41.61A184,184,0,0,1,128,136a184.07,184.07,0,0,1-88-22.38V72Zm0,128H40V131.64A200.19,200.19,0,0,0,128,152a200.25,200.25,0,0,0,88-20.37V200ZM104,112a8,8,0,0,1,8-8h32a8,8,0,0,1,0,16H112A8,8,0,0,1,104,112Z"
              />
            </svg>
          </div>
          <dt
            class="text-sm font-medium uppercase text-gray-500"
          >
            Unemployment Rate
          </dt>
        </div>
        <dd
          class="text-sm text-gray-900"
        >
          N/A
        </dd>
      </div>
    </dl>
  </div>
</div>
`;

exports[`IndicatorInformation matches OnlyUnemployment story snapshot 1`] = `
<div>
  <div>
    <h2
      class="text-xl font-semibold text-gray-900 mb-4"
    >
      Economic Indicators
    </h2>
    <dl
      class="space-y-3"
    >
      <div
        class="flex flex-wrap items-center gap-1 mb-2"
      >
        <div
          class="flex w-full items-center gap-2"
        >
          <div
            class="text-gray-500"
          >
            <svg
              class="w-4 h-4"
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm40-68a28,28,0,0,1-28,28h-4v8a8,8,0,0,1-16,0v-8H104a8,8,0,0,1,0-16h36a12,12,0,0,0,0-24H116a28,28,0,0,1,0-56h4V72a8,8,0,0,1,16,0v8h16a8,8,0,0,1,0,16H116a12,12,0,0,0,0,24h24A28,28,0,0,1,168,148Z"
              />
            </svg>
          </div>
          <dt
            class="text-sm font-medium uppercase text-gray-500"
          >
            GDP
          </dt>
        </div>
        <dd
          class="text-sm text-gray-900"
        >
          N/A
        </dd>
      </div>
      <div
        class="flex flex-wrap items-center gap-1 mb-2"
      >
        <div
          class="flex w-full items-center gap-2"
        >
          <div
            class="text-gray-500"
          >
            <svg
              class="w-4 h-4"
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M232,208a8,8,0,0,1-8,8H32a8,8,0,0,1-8-8V48a8,8,0,0,1,16,0v94.37L90.73,98a8,8,0,0,1,10.07-.38l58.81,44.11L218.73,90a8,8,0,1,1,10.54,12l-64,56a8,8,0,0,1-10.07.38L96.39,114.29,40,163.63V200H224A8,8,0,0,1,232,208Z"
              />
            </svg>
          </div>
          <dt
            class="text-sm font-medium uppercase text-gray-500"
          >
            Inflation Rate
          </dt>
        </div>
        <dd
          class="text-sm text-gray-900"
        >
          N/A
        </dd>
      </div>
      <div
        class="flex flex-wrap items-center gap-1 mb-2"
      >
        <div
          class="flex w-full items-center gap-2"
        >
          <div
            class="text-gray-500"
          >
            <svg
              class="w-4 h-4"
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M216,56H176V48a24,24,0,0,0-24-24H104A24,24,0,0,0,80,48v8H40A16,16,0,0,0,24,72V200a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V72A16,16,0,0,0,216,56ZM96,48a8,8,0,0,1,8-8h48a8,8,0,0,1,8,8v8H96ZM216,72v41.61A184,184,0,0,1,128,136a184.07,184.07,0,0,1-88-22.38V72Zm0,128H40V131.64A200.19,200.19,0,0,0,128,152a200.25,200.25,0,0,0,88-20.37V200ZM104,112a8,8,0,0,1,8-8h32a8,8,0,0,1,0,16H112A8,8,0,0,1,104,112Z"
              />
            </svg>
          </div>
          <dt
            class="text-sm font-medium uppercase text-gray-500"
          >
            Unemployment Rate
          </dt>
        </div>
        <dd
          class="text-sm text-gray-900"
        >
          5%
        </dd>
      </div>
    </dl>
  </div>
</div>
`;
